@@ -1,3 +1,9 @@
+2007-09-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_dirinfo.c:  _TIFFMergeFields() now only merges in field
+	definitions that are missing.  Existing definitions are silently
+	ignored.  (Bug #1585)
+
 2007-07-18  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* libtiff/{Makefile.am, Makefile.v}: Do not distribute tiffconf.h, 
